# qa_guru_5_9_jenkins_owner

./: README.md  build.gradle  pyproject.toml
docs/: demo_web_script.py  plan-and-materials-ru.md  webui_demo_test.py
python_web_test_kit/helpers/: AllureAttachments.java  reporting.py
python_web_test_kit/model/: controls.py
python_web_ui_test/config/: ProjectConfig.java
python_web_ui_test/helpers/: allure_reporting.py
python_web_ui_test/model/: components.py
src/test/java/config/: DriverConfig.java  Project.java  ProjectConfig.java
src/test/java/helpers/: Attach.java  AttachmentHelper.java  Attachments.java  DriverUtils.java
src/test/java/tests/: StudentRegistrationFormTests.java  TestBase.java
src/test/resources/config/: driver.properties.example  driver_example.properties
tests/: ConfTest.java  StudentRegistrationFormTests.java  StudentRegistrationFormTests.py  conftest.py  student_registration_form_test.py  student_registration_form_tests.py
web_ui_test_mvf/helpers/: allure_reporting.py
web_ui_test_mvf/model/: controls.py
