[tool.poetry]
name = "python-web-ui-test-base-template"
version = "0.1.0"
description = "python + pytest + selene + allure web ui tests project template"
authors = ["Iakiv Kramarenko <yashaka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selene = {version = "^2.0.0-alpha.38", allow-prereleases = true}
allure-pytest = "^2.9.43"
pytest = "^6.2.4"
Faker = "^8.8.0"
pydantic = "^1.8.2"